# stylus-workshop-gol

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
apps/contracts-solidity/: foundry.toml  package.json  pnpm-lock.yaml
apps/contracts-solidity/script/: Deploy.s.sol
apps/contracts-solidity/src/: NFT.sol  StylusNFT.sol
apps/contracts-solidity/test/: NFT.t.sol  README.md
apps/contracts-stylus/: Cargo.toml  README.md  package.json  rust-toolchain.toml
apps/contracts-stylus/src/: lib.rs  main.rs
apps/contracts-stylus/tests/: integration_test.rs
apps/contracts-stylus/tests/abi/: mod.rs
apps/contracts-stylus/tests/common/: mod.rs  project.rs
apps/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
apps/frontend/src/: App.tsx  constants.tsx  main.tsx  styles.css
apps/frontend/src/abi/: GameOfLifeNFT.json  SolidityStylusNFT.json
apps/frontend/src/components/: ETHBalance.tsx  Footer.tsx  Layout.tsx  Minter.tsx  SimilarMints.tsx
apps/frontend/src/config/: contracts.ts
apps/frontend/src/contexts/: Web3Context.tsx
apps/frontend/src/pages/: RustStylusNFTPage.tsx  SolidityNFTPage.tsx  SolidityStylusNFTPage.tsx
apps/frontend/src/services/: vectorSearchService.ts
apps/frontend/src/types/: ethereum.d.ts  global.d.ts  viem.d.ts
apps/frontend/src/utils/: format.tsx
scripts/: funds.sh
